syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";

message Sum {
    int32 int_one = 1;
    int32 int_two = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}

service CalculatorService{
    // Unary Example
    rpc Sum(SumRequest) returns (SumResponse) {};
}